# rules_storybook

./: CHANGELOG.md  README.md
.github/workflows/: ci.yml
docs/: BUILD.bazel  defs.md  update.sh
storybook/: BUILD.bazel  addon.bzl  build_driver.mjs  defs.bzl
storybook/private/: BUILD.bazel  storybook_dev.sh
